<resources>
    <string name="app_name">PopMov</string>
    <string name="action_settings">Settings</string>
    <string name="poster_picture_content_description">This is a poster of the movie</string>
    <string name="movie_title">Movie title</string>
    <string name="plot_synopsis">Overview</string>
    <string name="rating_title">Rating</string>
    <string name="rating_value">8.5</string>
    <string name="date_title">Release date</string>
    <string name="date_value">01.01.2018</string>
    <string name="movie_poster_content_description">Movie poster</string>
    <string name="obtain_api_key">Please obtain your API KEY first from themoviedb.org</string>
    <string name="response_json">Response from url:</string>
    <string name="movie_parcelable">movie_parcelable</string>
    <string name="review_parcelable">review_parcelable</string>
    <string name="check_reviews">Check reviews</string>
    <string name="see_trailer">See trailer</string>
    <string name="movie_id_extras">movie_id_extras</string>
    <string name="movie_id">movie_id</string>
    <string name="review_dummy">That was really awesome movie, lot of action, drama, love, emotions.</string>
    <string name="reviewer_dummy">Natalia Nazaruk</string>
    <string name="trailers_parcelable">trailers_parcelable</string>
    <string name="youtube">https://www.youtube.com/watch?v=</string>
    <string name="no_trailers">Looks like this movie doesn\'t have any trailers yet!</string>
    <string name="choosenOption">choosenOption</string>
    <string name="mChoosenOption">mChoosenOption</string>
</resources>
