<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pl.nataliana.popularmovies.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_image_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_picture_content_description"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/movie_title" />


            <TextView
                android:id="@+id/rating_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rating_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rating_value"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/synopsis_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/plot_synopsis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsis_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/plot_synopsis" />

            <TextView
                android:id="@+id/date_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/date_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/date_value"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
